--- a/UI/Web/src/app/_single-module/cover-image/cover-image.component.scss
+++ b/UI/Web/src/app/_single-module/cover-image/cover-image.component.scss
@@ -119,6 +119,7 @@
         text-align: center;
         position: absolute;
         width: 100%;
+        font-size: 0.8rem;
     }
 }
 
